--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation('com.airbnb.android:lottie:3.4.0') {
+        exclude group: 'com.android.support'
+    }
 }
